style/summary_login/signup_responsive.css
@media (max-width: 950px) {
    .back-arrow {
        top: 40px;
        left: 40px;
    }
}

@media (max-width: 600px) {
    .signup-button-primary {
        max-width: 100%;
        font-size: 18px;
    }

    .login-logo-signup img {
        width: 64px;
        height: 78px;
    }

    .login-logo-signup {
        padding-top: 20px;
        padding-left: 38px;
    }
}

@media (max-width: 500px) {
    .login-title {
        font-size: 47px;
    }

}

@media (max-width: 400px) {
    .login-title {
        font-size: 40px;
    }

    .login-footer {
        margin-top: 40px;
        display: flex;
        justify-content: center;
        gap: 16px;
        flex-wrap: wrap;
    }

    .input-error {
        font-size: 16px;
    }

    .back-arrow {
        top: 40px;
        left: 20px;
    }

    .input-error-password {
        margin: 10px 0px;
    }
}

@media (min-width: 1260px) and (max-width: 1300px) and (min-height: 780px) and (max-height: 820px) {
    .login-footer {
        margin-top: 20px;
    }
}

@media (max-height: 700px) {
    .login-footer {
        margin-top: 20px;
    }
}

